--- a/index.html
+++ b/index.html
@@ -22,11 +22,21 @@
     }
 
   </style>
-  <title>Book List</title>
+  <title>Chuck Norris Joke Generator</title>
 </head>
 <body>
   <div class="container">
-  
+    <h2>Chuck Norris Joke Generator</h2>
+    <form>
+      <div>
+        <label for="number">Number of jokes</label>
+        <input type="number" id="number">
+      </div>
+      <div>
+        <button class="get-jokes">Get Jokes</button>
+      </div>
+    </form>
+    <ul class="jokes"></ul>
   </div>
     
   <script src="app.js"></script>
